--- a/Chatr/src/app/search/search.component.css
+++ b/Chatr/src/app/search/search.component.css
@@ -1,47 +1,3 @@
-form.example input[type=text] {
-    padding: 10px;
-    font-size: 17px;
-    border-radius: 5px;
-    border: 1px solid grey;
-    float: left;
-    /* width: 80%; */
-    background: #f1f1f1;
-  }
-  form.example input[type=text]:focus {
-    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-    /* padding: 3px 0px 3px 3px; */
-    /* margin: 5px 1px 3px 0px; */
-    outline: 0;
-    border-radius: 5px;
-    border: 1px solid rgba(81, 203, 238, 1);
-  }
-  form.example button {
-    /* float: left; */
-    /* width: 20%; */
-    padding: 12px;
-    max-height: 100%;
-    display: inline;
-    margin-left: 3px;
-    border-radius: 5px;
-    background: #0F2862;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    /* border-left: none; */
-    cursor: pointer;
-  }
-  
-  form.example button:hover {
-    background: #0b7dda;
-  }
-  
-  form.example::after {
-    content: "";
-    clear: both;
-    display: table;
-    border-radius: 5px;
-  }
-
   div.search-container input[type=text] {
     color: white;
     padding: 10px;
@@ -50,7 +6,8 @@ form.example input[type=text] {
     border: 1px solid grey;
     float: left;
     /* width: 80%; */
-    background: #0F2862;
+    background: #4f5f76;
+    margin-bottom: 8px;
   }
   div.search-container input[type=text]:focus {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
@@ -66,7 +23,7 @@ form.example input[type=text] {
     padding: 12px;
     max-height: 100%;
     display: inline;
-    margin-left: 3px;
+    margin-left: 8px;
     border-radius: 5px;
     background: #4F5F76;
     color: white;
@@ -87,4 +44,76 @@ form.example input[type=text] {
     content: "";
     clear: both;
     display: table;
+  }
+  body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .topnav {
+    overflow: hidden;
+    background-color: #0F2862;
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+  
+  .topnav .search-container {
+    float: right;
+  }
+  
+  .topnav input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+  }
+  
+  .topnav .search-container button {
+    float: right;
+    /* padding: 6px 10px; */
+    margin-top: 8px;
+    margin-right: 16px;
+    /* background: #ddd; */
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* .topnav .search-container button:hover {
+    background: #ccc;
+  } */
+  
+  @media screen and (max-width: 600px) {
+    .topnav .search-container {
+      float: none;
+    }
+    .topnav a, .topnav input[type=text], .topnav .search-container button {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;  
+    }
   }
