Updated Routes and HTML

--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -1,14 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register New User</title>
-    <link rel="stylesheet" href="../css/regPg.css">
-</head>
-<body>
+<div>
         <div id="cont">
             <div class="alCenter">
                     <h1>REGISTER USER</h1> <!-- ../regUser -->
@@ -42,5 +32,4 @@
                     <button id="goBk"><a class="reggb" href="../index.html">Go Back To login</a></button>
             </div>
         </div>
-</body>
-</html>
+    </div>
