--- a/Chatr/src/app/login/login.component.html
+++ b/Chatr/src/app/login/login.component.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
-    <!-- <link rel="stylesheet" href="./css/login.css"> -->
-   
-	
-</head>
-<body>
+<div>
 
     <div id="cont">
         <div class="alCenter">
@@ -32,5 +21,4 @@
 		<button data-toggle="modal" data-target="#adminAccModal" id="adUser">Admin Login</button>
         </div>
 
-</body>
-</html>
+    </div>
