--- a/Chatr/src/app/register/register.component.css
+++ b/Chatr/src/app/register/register.component.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-body {
+/* body {
     padding:0;
     margin : 0;
     margin-bottom: 10%;
@@ -7,7 +7,7 @@ body {
     align-items: center;
     justify-content: center;
     margin-top: 5%;
-}
+} */
 #cont {
     max-width: 65%;
     padding: 0 10px 10px 10px;
