--- a/Chatr/src/app/search/search.component.html
+++ b/Chatr/src/app/search/search.component.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="topnav">
     <div class="search-container">
-        <form action="">
-            <input type="text" placeholder="Search.." name="search">
+        <form (ngSubmit)="messagesByUsername()"#searchForm="ngForm">
+            <input type="text" name="search" placeholder="Search.." [(ngModel)]="username"/>
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
