--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -1,4 +1,7 @@
-<div>
+<div class="container">
+        <div class="row justify-content-md-center">
+           
+        <div class="col-md-auto"> 
         <div id="cont">
             <div class="alCenter">
                     <h1>REGISTER USER</h1> <!-- ../regUser -->
@@ -29,7 +32,9 @@
                         <br>
                         <input id="regfrSub" type="button" value="Register" >
                     </form>
-                    <button id="goBk"><a class="reggb" href="../index.html">Go Back To login</a></button>
+                    <button id="goBk"><a class="reggb"  routerLink="/">Go Back To login</a></button>
             </div>
+        </div>
+        </div>
         </div>
     </div>
