--- a/Chatr/src/app/login/login.component.css
+++ b/Chatr/src/app/login/login.component.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 #cont {
-    max-width: 50%;
+    margin-top: 25%;
+    max-width: 100%;
     padding: 0 10px 10px 10px;
     background-color:  #FC9950;  
     border: 3px solid orange;
