--- a/Chatr/src/app/register/register.component.css
+++ b/Chatr/src/app/register/register.component.css
@@ -12,8 +12,8 @@
     margin-top : 15%;
     max-width: 100%;
     padding: 0 10px 10px 10px;
-    background-color:  #FC9950;  
-    border: 3px solid orange;
+    background-color:  #DADDE2;  
+    border: 3px solid #0F2862;
     font-family: 'Roboto', sans-serif;
 }
 
