This is updated

--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -6,8 +6,53 @@
             <div class="alCenter">
                     <h1>REGISTER USER</h1> <!-- ../regUser -->
                     <form name="regForm" id="regFormid" onsubmit ="return false" method="POST" action="../regUser" >
-                        <h2>Please Enter Your User Information : </h2>
-                        <h4>First Name : </h4>
+                        <h3>Please Enter Your User Information : </h3>
+                        <table class="example-full-width" cellspacing="20">
+                            <tr>
+                                <td>
+                                    <mat-form-field class="matInp">
+                                        <input matInput type="text" placeholder="First Name" required/>
+                                    </mat-form-field>
+                                </td>
+                                <td>
+                                    <mat-form-field class="matInp">
+                                        <input matInput type="text" placeholder="Last Name" required/>
+                                    </mat-form-field>
+                                </td>
+                            </tr>
+                        </table>
+                        <br>
+                        <table class="example-full-width" cellspacing="20" >
+                            <tr>
+                                <td>
+                                    <mat-form-field class="matInp">
+                                        <input matInput type="text" placeholder="UserName" required/>
+                                    </mat-form-field>
+                                </td>
+                                <td>
+                                    <mat-form-field class="matInp">
+                                        <input matInput type="email" placeholder="Email" required/>
+                                    </mat-form-field>
+                                </td>
+                            </tr>
+                        </table>
+
+                        <table class="example-full-width" cellspacing="20">
+                                <tr>
+                                    <td>
+                                        <mat-form-field class="matInp">
+                                            <input matInput type="password" placeholder="Password" required/>
+                                        </mat-form-field>
+                                    </td>
+                                    <td>
+                                        <mat-form-field class="matInp">
+                                            <input matInput type="password" placeholder="Retype Password" required/>
+                                        </mat-form-field>
+                                    </td>
+                                </tr>
+                        </table>
+
+                        <!-- <h4>First Name : </h4>
                         <input id="fn" class="rgInp" type="text" name="firstName" placeholder="First name">
                         <h4>Last Name : </h4>
                         <input id="ln" class="rgInp" type="text" name="lastName" placeholder="Last name">
@@ -18,21 +63,36 @@
                         <h4>Password Check : </h4>
                         <input class="rgInp" type="password" name="password2" placeholder="Re-enter Password">
                         <h4></h4>
-                        <hr>
+                        <hr> -->
                         
-                        <h2>Please Enter A Security Questions : </h2>
-                        <select id="seqQus" class="rgInp" id="opsSel" name="regIng">
+                        <h3>Please Enter A Security Questions : </h3>
+                        <mat-form-field class="matInp">
+                            <mat-label>Security Questions : </mat-label>
+                            <select matNativeControl required>
+                                <option value="What is your Middle Name">What is your Middle Name</option>
+                                <option value="What is your First Car Model Name">What is your First Car Model Name ?</option>
+                                <option value="What is your Pet Name">What is your Pet Name ?</option>
+                                <option value="What city were you Born">What city were you Born ?</option>
+                            </select>
+                        </mat-form-field>
+                        
+                        <!-- <select id="seqQus" class="rgInp" id="opsSel" name="regIng">
                                 <option value="What is your Middle Name">What is your Middle Name ?</option>
                                 <option value="What is your First Car Model Name">What is your First Car Model Name ?</option>
                                 <option value="What is your Pet Name">What is your Pet Name ?</option>
                                 <option value="What city were you Born">What city were you Born ?</option>
-                        </select>
-                        <h4>Answer : </h4>
-                        <input id="seqAns" class="rgInp" type="text" name="seqAns" placeholder="Question Answer">
-                        <br>
+                        </select> -->
+
+
+                        <h5>Answer : </h5>
+                        <mat-form-field class="matInp">
+                                <input matInput type="text" placeholder="Question Answer" required/>
+                        </mat-form-field>
+                        <!-- <input id="seqAns" class="rgInp" type="text" name="seqAns" placeholder="Question Answer">
+                        <br> -->
                         <input id="regfrSub" type="button" value="Register" >
                     </form>
-                    <button id="goBk"><a class="reggb"  routerLink="/">Go Back To login</a></button>
+                    <button id="goBk" mat-raised-button color="primary"><a class="reggb"  routerLink="/">Go Back To login</a></button>
             </div>
         </div>
         </div>
