--- a/Chatr/src/app/register/register.component.css
+++ b/Chatr/src/app/register/register.component.css
@@ -47,3 +47,9 @@ border: 2px solid none;
     text-decoration: none;
     color : white;
 }
+
+.matInp{
+    width:100%;
+    color :black;
+    font-size:20px;
+}
