This is updated

--- a/Chatr/src/app/app.component.html
+++ b/Chatr/src/app/app.component.html
@@ -1,16 +1,5 @@
-  <div class="nav">
-    Courtney's search component here
-  </div>
-  <div class="main-page container">
-
-    <div class="channels-bar col-md-2">
-      <div class="p-info">
-          Name<br>
-          Handle<br>
-          Join date
-      </div>
-    </div>
-
-    </div>
+<div>
+    <router-outlet></router-outlet>
+</div>
 
 
