--- a/Chatr/src/app/chat-window/chat-window.component.html
+++ b/Chatr/src/app/chat-window/chat-window.component.html
@@ -2,6 +2,21 @@
     Chat bubbles go here
 </div>
     
+<div class="nav">
+        Courtney's search component here
+      </div>
+      <div class="main-page container">
+    
+        <div class="channels-bar col-md-2">
+          <div class="p-info">
+              Name<br>
+              Handle<br>
+              Join date
+          </div>
+        </div>
+    
+        </div>
+
 <div class="input-group mb-3" id="chat-input">
     <input type="text" class="form-control" placeholder="Enter message here..." aria-label="Recipient's username" aria-describedby="button-addon2">
     <div class="input-group-append">
