--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -92,7 +92,7 @@
                         <br> -->
                         <input id="regfrSub" type="button" value="Register" >
                     </form>
-                    <button id="goBk" mat-raised-button color="primary"><a class="reggb"  routerLink="/">Go Back To login</a></button>
+                    <button id="goBk" ><a class="reggb"  routerLink="/">Go Back To login</a></button>
             </div>
         </div>
         </div>
