--- a/Chatr/src/app/register/register.component.css
+++ b/Chatr/src/app/register/register.component.css
@@ -22,18 +22,35 @@ border: 2px solid none;
     margin-top : 20px;
     width : 100%;
     padding : 10px;
-    background-color: #2F81FA ;
-    border : none;
+    /*background-color: #2F81FA ;*/
+    background-color: #DADDE2;
+    border : 3px solid #2F81FA;
+    transition : background-color .5s;
+    transition : color .5s;
+
+}
+#regfrSub:hover {
+    color : black;
+    background-color : #2F81FA;
 }
 
 #goBk {
+    color : black;
     font-size: 20px;
     margin-top: 20px;
     width :100%;
     padding:10px;
-    background-color: #2D1606  ;
-    border : none;
+    background-color: #DADDE2;
+    border : 3px solid #2D1606;
+    transition : background-color .5s;
+    transition : color .5s;
+    /* background-color:   ; */
+
 } 
+#goBk:hover {
+    color : white;
+    background-color : #2D1606;
+}
 
 .reggb {
     text-decoration: none;
