--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -6,92 +6,76 @@
             <div class="alCenter">
                     <h1>REGISTER USER</h1> <!-- ../regUser -->
                     <form name="regForm" id="regFormid" onsubmit ="return false" method="POST" action="../regUser" >
-                        <h3>Please Enter Your User Information : </h3>
-                        <table class="example-full-width" cellspacing="20">
-                            <tr>
-                                <td>
-                                    <mat-form-field class="matInp">
-                                        <input matInput type="text" placeholder="First Name" required/>
-                                    </mat-form-field>
-                                </td>
-                                <td>
-                                    <mat-form-field class="matInp">
-                                        <input matInput type="text" placeholder="Last Name" required/>
-                                    </mat-form-field>
-                                </td>
-                            </tr>
-                        </table>
-                        <br>
-                        <table class="example-full-width" cellspacing="20" >
-                            <tr>
-                                <td>
-                                    <mat-form-field class="matInp">
-                                        <input matInput type="text" placeholder="UserName" required/>
-                                    </mat-form-field>
-                                </td>
-                                <td>
-                                    <mat-form-field class="matInp">
-                                        <input matInput type="email" placeholder="Email" required/>
-                                    </mat-form-field>
-                                </td>
-                            </tr>
-                        </table>
 
-                        <table class="example-full-width" cellspacing="20">
-                                <tr>
-                                    <td>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-auto">
+                                        <h3>Please Enter Your User Information : </h3>
+                                        <table class="example-full-width" cellspacing="20" >
+                                            <tr>
+                                                <td>
+                                                    <mat-form-field class="matInp">
+                                                        <input matInput type="text" placeholder="First Name" required/>
+                                                    </mat-form-field>
+                                                </td>
+                                                <td>
+                                                    <mat-form-field class="matInp">
+                                                        <input matInput type="text" placeholder="Last Name" required/>
+                                                    </mat-form-field>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <br>
+                                        <table class="example-full-width" cellspacing="20" >
+                                            <tr>
+                                                <td>
+                                                    <mat-form-field class="matInp">
+                                                        <input matInput type="text" placeholder="UserName" required/>
+                                                    </mat-form-field>
+                                                </td>
+                                                <td>
+                                                    <mat-form-field class="matInp">
+                                                        <input matInput type="email" placeholder="Email" required/>
+                                                    </mat-form-field>
+                                                </td>
+                                            </tr>
+                                        </table>
+                
+                                        <table class="example-full-width" cellspacing="20">
+                                                <tr>
+                                                    <td>
+                                                        <mat-form-field class="matInp">
+                                                            <input matInput type="password" placeholder="Password" required/>
+                                                        </mat-form-field>
+                                                    </td>
+                                                    <td>
+                                                        <mat-form-field class="matInp">
+                                                            <input matInput type="password" placeholder="Retype Password" required/>
+                                                        </mat-form-field>
+                                                    </td>
+                                                </tr>
+                                        </table>
+                                </div>
+                                <div class="col-sm-auto">
+                                        <h3>Please Enter A Security Questions : </h3>
                                         <mat-form-field class="matInp">
-                                            <input matInput type="password" placeholder="Password" required/>
+                                            <mat-label>Security Questions : </mat-label>
+                                            <select matNativeControl required>
+                                                <option value="What is your Middle Name">What is your Middle Name</option>
+                                                <option value="What is your First Car Model Name">What is your First Car Model Name ?</option>
+                                                <option value="What is your Pet Name">What is your Pet Name ?</option>
+                                                <option value="What city were you Born">What city were you Born ?</option>
+                                            </select>
                                         </mat-form-field>
-                                    </td>
-                                    <td>
+                                        <h5>Answer : </h5>
                                         <mat-form-field class="matInp">
-                                            <input matInput type="password" placeholder="Retype Password" required/>
+                                            <input matInput type="text" placeholder="Question Answer" required/>
                                         </mat-form-field>
-                                    </td>
-                                </tr>
-                        </table>
-
-                        <!-- <h4>First Name : </h4>
-                        <input id="fn" class="rgInp" type="text" name="firstName" placeholder="First name">
-                        <h4>Last Name : </h4>
-                        <input id="ln" class="rgInp" type="text" name="lastName" placeholder="Last name">
-                        <h4>User Email : </h4>
-                        <input id="uemail" class="rgInp" type="email" name="usrEmail" placeholder="Email">
-                        <h4>Password : </h4>
-                        <input  class="rgInp" id="password" type="password" name="password" placeholder="Password">
-                        <h4>Password Check : </h4>
-                        <input class="rgInp" type="password" name="password2" placeholder="Re-enter Password">
-                        <h4></h4>
-                        <hr> -->
-                        
-                        <h3>Please Enter A Security Questions : </h3>
-                        <mat-form-field class="matInp">
-                            <mat-label>Security Questions : </mat-label>
-                            <select matNativeControl required>
-                                <option value="What is your Middle Name">What is your Middle Name</option>
-                                <option value="What is your First Car Model Name">What is your First Car Model Name ?</option>
-                                <option value="What is your Pet Name">What is your Pet Name ?</option>
-                                <option value="What city were you Born">What city were you Born ?</option>
-                            </select>
-                        </mat-form-field>
-                        
-                        <!-- <select id="seqQus" class="rgInp" id="opsSel" name="regIng">
-                                <option value="What is your Middle Name">What is your Middle Name ?</option>
-                                <option value="What is your First Car Model Name">What is your First Car Model Name ?</option>
-                                <option value="What is your Pet Name">What is your Pet Name ?</option>
-                                <option value="What city were you Born">What city were you Born ?</option>
-                        </select> -->
-
-
-                        <h5>Answer : </h5>
-                        <mat-form-field class="matInp">
-                                <input matInput type="text" placeholder="Question Answer" required/>
-                        </mat-form-field>
-                        <!-- <input id="seqAns" class="rgInp" type="text" name="seqAns" placeholder="Question Answer">
-                        <br> -->
-                        <input id="regfrSub" type="button" value="Register" >
-                    </form>
+                                </div>
+                            </div>
+                        </div>    
+                </form>
+                <input id="regfrSub" type="button" value="Register" >
                     <button id="goBk" ><a class="reggb"  routerLink="/">Go Back To login</a></button>
             </div>
         </div>
