--- a/Chatr/src/app/search/search.component.html
+++ b/Chatr/src/app/search/search.component.html
@@ -1,9 +1,9 @@
-<link rel="stylesheet" href="search.component.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="topnav">
     <div class="search-container">
-        <form (ngSubmit)="messagesByUsername()"#searchForm="ngForm">
-            <input type="text" name="search" placeholder="Search.." [(ngModel)]="username"/>
+        <form (ngSubmit)="search()"#searchForm="ngForm">
+            <input type="text" name="username" placeholder="Search.." [(ngModel)]="username"/>
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
