continuing developement of spring application

--- a/Chatr/src/app/login/login.component.html
+++ b/Chatr/src/app/login/login.component.html
@@ -8,20 +8,18 @@
         <div class="alCenter">
         <h1>CHATR LOGIN : </h1>
         <!-- onsubmit="return loginValidForm()" action="login" method="post"  -->
-        <form name="loginForm" method ="post" action="login" onsubmit="return false"  id="loginForm" >
+        <form name="loginForm" (ngSubmit)="login()" method ="post" action="login" onsubmit="return false"  id="loginForm" >
             
-            <mat-form-field class="matInp">
-                <input  matInput type="text" placeholder="UserName" [formControl]="email" required>
-            </mat-form-field>
             
-            <mat-form-field class="matInp">
-                    <input  matInput type="password" placeholder="Password" [formControl]="password" required>
-            </mat-form-field>
+                <input type="text" placeholder="UserName" name="username" [(ngModel)] = "user.userName" required>
+           
             
-            <!-- <br>
-            <a href="./pages/fgPass.html">Forgot Pass</a>
-            <br/>  -->
-            <input  value="Login" type="submit" id="frSub" />
+           
+                <input type="password" placeholder="Password" name="password" [(ngModel)] = "user.passWord" required>
+         
+            
+           <br>
+            <input  value="Login" type="submit" id="frSub"  />
 		</form>
 
         <button id="nrgBtn"><span><a class="rLink" routerLink="/register"> New User </a> </span> </button>
