--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -14,14 +14,14 @@
                                         <table class="example-full-width" cellspacing="20" >
                                             <tr>
                                                 <td>
-                                                    <mat-form-field class="matInp">
+                                                    <!-- <mat-form-field class="matInp">
                                                         <input matInput type="text" placeholder="First Name" required/>
-                                                    </mat-form-field>
+                                                    </mat-form-field> -->
                                                 </td>
                                                 <td>
-                                                    <mat-form-field class="matInp">
+                                                    <!-- <mat-form-field class="matInp">
                                                         <input matInput type="text" placeholder="Last Name" required/>
-                                                    </mat-form-field>
+                                                    </mat-form-field> -->
                                                 </td>
                                             </tr>
                                         </table>
@@ -29,14 +29,14 @@
                                         <table class="example-full-width" cellspacing="20" >
                                             <tr>
                                                 <td>
-                                                    <mat-form-field class="matInp">
+                                                    <!-- <mat-form-field class="matInp">
                                                         <input matInput type="text" placeholder="UserName" required/>
-                                                    </mat-form-field>
+                                                    </mat-form-field> -->
                                                 </td>
                                                 <td>
-                                                    <mat-form-field class="matInp">
+                                                    <!-- <mat-form-field class="matInp">
                                                         <input matInput type="email" placeholder="Email" required/>
-                                                    </mat-form-field>
+                                                    </mat-form-field> -->
                                                 </td>
                                             </tr>
                                         </table>
@@ -44,21 +44,21 @@
                                         <table class="example-full-width" cellspacing="20">
                                                 <tr>
                                                     <td>
-                                                        <mat-form-field class="matInp">
+                                                        <!-- <mat-form-field class="matInp">
                                                             <input matInput type="password" placeholder="Password" required/>
-                                                        </mat-form-field>
+                                                        </mat-form-field> -->
                                                     </td>
                                                     <td>
-                                                        <mat-form-field class="matInp">
+                                                        <!-- <mat-form-field class="matInp">
                                                             <input matInput type="password" placeholder="Retype Password" required/>
-                                                        </mat-form-field>
+                                                        </mat-form-field> -->
                                                     </td>
                                                 </tr>
                                         </table>
                                 </div>
                                 <div class="col-sm-auto">
                                         <h3>Please Enter A Security Questions : </h3>
-                                        <mat-form-field class="matInp">
+                                        <!-- <mat-form-field class="matInp">
                                             <mat-label>Security Questions : </mat-label>
                                             <select matNativeControl required>
                                                 <option value="What is your Middle Name">What is your Middle Name</option>
@@ -70,7 +70,7 @@
                                         <h5>Answer : </h5>
                                         <mat-form-field class="matInp">
                                             <input matInput type="text" placeholder="Question Answer" required/>
-                                        </mat-form-field>
+                                        </mat-form-field> -->
                                 </div>
                             </div>
                         </div>    
