--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -11,66 +11,8 @@
                             <div class="row">
                                 <div class="col-sm-auto">
                                         <h3>Please Enter Your User Information : </h3>
-                                        <table class="example-full-width" cellspacing="20" >
-                                            <tr>
-                                                <td>
-                                                    <!-- <mat-form-field class="matInp">
-                                                        <input matInput type="text" placeholder="First Name" required/>
-                                                    </mat-form-field> -->
-                                                </td>
-                                                <td>
-                                                    <!-- <mat-form-field class="matInp">
-                                                        <input matInput type="text" placeholder="Last Name" required/>
-                                                    </mat-form-field> -->
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <br>
-                                        <table class="example-full-width" cellspacing="20" >
-                                            <tr>
-                                                <td>
-                                                    <!-- <mat-form-field class="matInp">
-                                                        <input matInput type="text" placeholder="UserName" required/>
-                                                    </mat-form-field> -->
-                                                </td>
-                                                <td>
-                                                    <!-- <mat-form-field class="matInp">
-                                                        <input matInput type="email" placeholder="Email" required/>
-                                                    </mat-form-field> -->
-                                                </td>
-                                            </tr>
-                                        </table>
-                
-                                        <table class="example-full-width" cellspacing="20">
-                                                <tr>
-                                                    <td>
-                                                        <!-- <mat-form-field class="matInp">
-                                                            <input matInput type="password" placeholder="Password" required/>
-                                                        </mat-form-field> -->
-                                                    </td>
-                                                    <td>
-                                                        <!-- <mat-form-field class="matInp">
-                                                            <input matInput type="password" placeholder="Retype Password" required/>
-                                                        </mat-form-field> -->
-                                                    </td>
-                                                </tr>
-                                        </table>
-                                </div>
-                                <div class="col-sm-auto">
-                                        <h3>Please Enter A Security Questions : </h3>
-                                        <!-- <mat-form-field class="matInp">
-                                            <mat-label>Security Questions : </mat-label>
-                                            <select matNativeControl required>
-                                                <option value="What is your Middle Name">What is your Middle Name</option>
-                                                <option value="What is your First Car Model Name">What is your First Car Model Name ?</option>
-                                                <option value="What is your Pet Name">What is your Pet Name ?</option>
-                                                <option value="What city were you Born">What city were you Born ?</option>
-                                            </select>
-                                        </mat-form-field>
-                                        <h5>Answer : </h5>
-                                        <mat-form-field class="matInp">
-                                            <input matInput type="text" placeholder="Question Answer" required/>
-                                        </mat-form-field> -->
+                                        <input type="text" name="chatruser" placeholder="Username" [(ngModel)] = user.chatruser><br>
+                                        <input type="password" name="password" placeholder="Password" [(ngModel)] = user.passWord><br>
                                 </div>
                             </div>
                         </div>    
