--- a/Chatr/src/styles.css
+++ b/Chatr/src/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0%;
+    background: #4f5f76;
   /*font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: rgb(114, 132, 158);*/
 }
