login and register now route to chat page

--- a/Chatr/src/app/chat-window/chat-window.component.html
+++ b/Chatr/src/app/chat-window/chat-window.component.html
@@ -1,11 +1,7 @@
-<div *ngIf="authorized else elseBlock" >
+<app-search></app-search>
 <div class="post-box">
     Chat bubbles go here
 </div>
-    
-<div class="nav">
-        Courtney's search component here
-      </div>
       <div class="main-page container">
     
         <div class="channels-bar col-md-2">
@@ -24,12 +20,6 @@
     <button class="btn btn-secondary" type="button" id="button-addon2">Button</button>
     </div>
 </div>
-</div>
 
-
-<ng-template #elseBlock>
-    <h2>Page is Unauthorized Plase Try Again Later</h2>
-
-</ng-template>
 
 
