--- a/Chatr/src/app/chat-window/chat-window.component.html
+++ b/Chatr/src/app/chat-window/chat-window.component.html
@@ -1,9 +1,18 @@
 <app-search></app-search>
-<div class="post-box">
-    Chat bubbles go here
+<div class="post-box" id="post-box">
+   
+      <div class="messageArea" id="messageArea">
+    
+  </div>
+  <!-- <ul class="message-list">
+    <li class="user-message" *ngFor="let message of messages">
+      <span class="user-id">{{ message.senderId }}</span>
+      <span>{{ message.text }}</span>
+    </li>
+  </ul> -->
 </div>
       <div class="main-page container">
-    
+        
         <div class="channels-bar col-md-2">
           <div class="p-info">
               Name<br>
@@ -14,12 +23,14 @@
     
         </div>
 
-<div class="input-group mb-3" id="chat-input">
-    <input type="text" class="form-control" placeholder="Enter message here..." aria-label="Recipient's username" aria-describedby="button-addon2">
+  <form (ngSubmit)="sendMessage()">
+    <div class="input-group mb-3" id="chat-input">
+      <input type="text" class="form-control" name="messages" placeholder="Enter message here..." [(ngModel)]="payload.message" aria-label="Recipient's username" aria-describedby="button-addon2">
     <div class="input-group-append">
-    <button class="btn btn-secondary" type="button" id="button-addon2">Button</button>
+      <button class="btn btn-secondary" type="submit" id="button-addon2">Post</button>
     </div>
-</div>
+  </div>
+</form>
 
 
 
