--- a/Chatr/src/app/chat-window/chat-window.component.html
+++ b/Chatr/src/app/chat-window/chat-window.component.html
@@ -1,23 +1,12 @@
 <app-search></app-search>
 <div class="post-box" id="post-box">
-   
-      <div class="messageArea" id="messageArea">
-    
-  </div>
-  <!-- <ul class="message-list">
-    <li class="user-message" *ngFor="let message of messages">
-      <span class="user-id">{{ message.senderId }}</span>
-      <span>{{ message.text }}</span>
-    </li>
-  </ul> -->
+  <div id="messageArea"></div>
 </div>
       <div class="main-page container">
         
         <div class="channels-bar col-md-2">
           <div class="p-info">
-              Name<br>
-              Handle<br>
-              Join date
+              {{ username }}
           </div>
         </div>
     
