--- a/Chatr/src/app/search/search.component.css
+++ b/Chatr/src/app/search/search.component.css
@@ -54,6 +54,20 @@
     overflow: hidden;
     background-color: #0F2862;
   }
+
+  .topnav button {
+    padding: 11px;
+    max-height: 100%;
+    display: inline;
+    margin-top: 6px;
+    margin-left: 17px;
+    border-radius: 5px;
+    background: #4F5F76;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    cursor: pointer;
+  }
   
   .topnav a {
     float: left;
