--- a/Chatr/src/app/register/register.component.html
+++ b/Chatr/src/app/register/register.component.html
@@ -10,9 +10,15 @@
                         <div class="container">
                             <h3>Please Enter Your User Information : </h3>
                             <div class="row">
-                                        <input class="form-control col-md-6" type="text" name="chatruser" placeholder="Username" [(ngModel)] = user.chatruser>
-                                        <input class="form-control col-md-6" type="password" name="password" placeholder="Password" [(ngModel)] = user.passWord>
+                                        <input class="form-control col-md-6" type="text" name="chatruser" placeholder="Username" required maxlength="8" [(ngModel)] = user.chatruser>
+                                        <input class="form-control col-md-6" type="password" name="password" placeholder="Password" required maxlength="8" [(ngModel)] = user.passWord>
                             </div>
+                            <div *ngIf="name.errors.maxlength">
+                                    Name must be at max 8 characters long.
+                                </div>
+                            <div *ngIf="password.errors.maxlength">
+                                    Password must be at max 8 characters long.
+                                </div>
                         </div> 
                         <input id="regfrSub" type="submit" value="Register" >   
                 </form>
